--- a/descriptools_qgis_dialog_base.ui
+++ b/descriptools_qgis_dialog_base.ui
@@ -126,13 +126,13 @@
      <x>20</x>
      <y>150</y>
      <width>191</width>
-     <height>201</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="title">
     <string>Descriptors to calculate</string>
    </property>
-   <widget class="QCheckBox" name="checkBox">
+   <widget class="QCheckBox" name="checkBoxSlope">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -145,7 +145,7 @@
      <string>Slope</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_2">
+   <widget class="QCheckBox" name="checkBoxTI">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -158,7 +158,7 @@
      <string>Topographic Index</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_3">
+   <widget class="QCheckBox" name="checkBoxMTI">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -171,7 +171,7 @@
      <string>Modified Topographic Index</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_4">
+   <widget class="QCheckBox" name="checkBoxDownslope">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -184,7 +184,7 @@
      <string>Downslope Index</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_5">
+   <widget class="QCheckBox" name="checkBoxHDistance">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -197,7 +197,7 @@
      <string>Horizontal Distance</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_6">
+   <widget class="QCheckBox" name="checkBoxHAND">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -210,7 +210,7 @@
      <string>HAND</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_7">
+   <widget class="QCheckBox" name="checkBoxGFI">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -223,7 +223,7 @@
      <string>GFI</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_8">
+   <widget class="QCheckBox" name="checkBoxLFI">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -243,7 +243,7 @@
      <x>220</x>
      <y>150</y>
      <width>261</width>
-     <height>201</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="title">
@@ -305,7 +305,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>GFI/LFI scale factor (b)</string>
+     <string>Modified TI expoent n</string>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
@@ -322,7 +322,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>120</y>
+      <y>150</y>
       <width>201</width>
       <height>21</height>
      </rect>
@@ -336,6 +336,52 @@
      <rect>
       <x>190</x>
       <y>120</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="doubleSpinBox_5">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>150</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>201</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GFI/LFI scale factor (b)</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBoxPixelSize">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>180</y>
+      <width>170</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Custom raster pixel</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="doubleSpinBoxPixel">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>180</y>
       <width>61</width>
       <height>21</height>
      </rect>
