--- a/descriptools_qgis_dialog_base.ui
+++ b/descriptools_qgis_dialog_base.ui
@@ -89,7 +89,7 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="comboBoxDem">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -99,7 +99,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QComboBox" name="comboBoxFdr">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -109,7 +109,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_3">
+   <widget class="QComboBox" name="comboBoxFac">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -459,7 +459,7 @@
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>0</number>
     </property>
    </widget>
   </widget>
